container and booknow button spacing fix

--- a/app/components/RightImageShadow/RightImageShadow.module.css
+++ b/app/components/RightImageShadow/RightImageShadow.module.css
@@ -13,7 +13,7 @@
     margin-right: 10px;
     height: 50px;
     width: 250px;
-    padding: 0px;
+    padding: 0px !important;
     border-color: #ffff;
     box-shadow: 0px 0px 20px 0px rgba(232, 232, 235, 0.3);
 
