--- a/app/globals.css
+++ b/app/globals.css
@@ -98,3 +98,9 @@
 #swip .swiper-button-next {
   right: 0px !important;
 }
+@media (min-width: 320px) and (max-width: 400px) {
+  .container {
+    max-width: 350px;
+  }
+
+}
